--- a/GoogleSearch/package.json
+++ b/GoogleSearch/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-player": "^2.11.2",
+    "react-router-dom": "^5.3.0",
+    "use-debounce": "^9.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
